Fix map button overflow

--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -607,6 +607,7 @@ span.game-mode-button {
 .map-button {
     padding-left: 57px;
     padding-right: 57px;
+    font-size: 12px;
     box-shadow: none !important;
 }
 
